# ESP32-WiFi-with-Zephyr

./: Kconfig  LICENSE  README.md  TODO.md  script_tcp_sender.py  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay
app/lib/led/: led.cpp  led.h
app/lib/tcp/: tcp.cpp  tcp.h
app/lib/udp/: udp.cpp  udp.h
app/lib/wifi/: wifi.cpp  wifi.h
app/src/: main.cpp
scripts/: script_udp_sender.py
zephyr/: module.yml
